--- a/AdventOfCode2024/Day03/Day03.csproj
+++ b/AdventOfCode2024/Day03/Day03.csproj
@@ -14,6 +14,9 @@
     <None Update="SampleFile.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="SampleFile2.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
